# static/swagger.json
@@ -20,7 +20,15 @@
           "url": "/"
           }
       ],
+      
          "components": {
+            "securitySchemes": {
+                "bearerAuth": {
+                  "type": "http",
+                  "scheme": "bearer",
+                  "bearerFormat": "JWT"
+                }
+              },
           "schemas": {
               "store": {
                   "type": "object",
@@ -47,11 +55,104 @@
                             "type": "string"
                             }
                   }
-              }
+              },
+              "register": {
+                "type": "object",
+                "properties": {
+                    "public_id": {
+                        "type": "string"
+                    },
+                    "name": {
+                        "type": "string"
+                    },
+                    "password": {
+                        "type": "string"
+                    }
+                }
+            },
+            "login": {
+                "type": "object",
+                "properties": {
+                    "name": {
+                    "type": "string"
+                    },
+                    "password": {
+                        "type": "string"
+                        }
+                }
+            }
                 
           }
       },
        "paths": {
+        "/register":{
+            "post": {
+                "tags": [
+                    "signUp"
+                ],
+                "summary": "Add todo",
+                "requestBody": {
+                "description": "Post New todo To Database",
+                "required": true,
+                "content": {
+                    "application/json": {
+                    "schema": {
+                        "$ref": "#/components/schemas/register"
+                        }
+                    }
+                }
+                },
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                        "$ref": "#/components/schemas/register"
+                        }
+                    },
+                    "404": {
+                        "description": "NOT FOUND",
+                        "schema": {
+                        "$ref": "#/components/schemas/register"
+                        }
+                    }
+                }
+            }
+        },
+
+        "/login":{
+            "post": {
+                "tags": [
+                    "SignIn"
+                ],
+                "summary": "Add todo",
+                "requestBody": {
+                "description": "Post New todo To Database",
+                "required": true,
+                "content": {
+                    "application/json": {
+                    "schema": {
+                        "$ref": "#/components/schemas/login"
+                        }
+                    }
+                }
+                },
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                        "$ref": "#/components/schemas/login"
+                        }
+                    },
+                    "404": {
+                        "description": "NOT FOUND",
+                        "schema": {
+                        "$ref": "#/components/schemas/login"
+                        }
+                    }
+                }
+            }
+        },
+         
           
           "/search":{
             "post": {
@@ -90,6 +191,11 @@
                   "tags": [
                       "Get todos from API"
                   ],
+                  "security": [
+                    {
+                       "bearerAuth": []
+                    }
+                 ],
                   "summary": "Get todos",
                   "parameters": [{
                     "name": "title",
